# job_tracker_dashboard

./: .dependency-cruiser.js  .gitignore  .jscpd.json  CONTRIBUTING.md  README.de.md  README.md  README.ru.md  README_de.md  README_ru.md  babel.config.json  criptsgit commit -m chore update tooling and quality scripts  docker-compose.prod.yml  eslint.config.js  firebase.json  index.html  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js  tatus model  tsconfig.eslint.json  tsconfig.json  tsconfig.node.json  tsconfig.tests.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  reset_db.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_users.py  0002_create_applications.py  0003_create_history_and_activity.py  0004_add_firestore_migration_log.py  0005_create_documents.py  0007_add_application_favorites.py  0008_create_vacancy_matches.py  0009_create_loops.py  0010_add_loop_search_settings.py  0011_vacancy_match_analyses.py  0012_add_user_analysis_plan.py  0013_add_preview_match_metadata.py  0014_create_vacancy_preview_ignores.py  (+9 more)
backend/app/: main.py  scheduler.py
backend/scripts/: check_discovery_source_status.py  export_openapi.py  migrate_firestore_to_postgres.py  run_dev.py  seed_dev_qa.py
backend/tests/: conftest.py  test_age.py  test_auth_service.py  test_config.py  test_document_storage.py  test_firebase_verifier.py  test_health.py  test_migration_mapper.py  test_openapi.py  test_request_id.py  test_scheduler_alignment.py  test_seed_dev_qa.py
(+1818 files in other folders)
